fixing contrast error index

--- a/project-7/suwrfc.css
+++ b/project-7/suwrfc.css
@@ -178,7 +178,7 @@ footer .quote {
 .grid-item {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #fdfdfd;
     border-radius: 8px;
 }
 
